package kurswork.order.entity;

public enum Status {
    Process,Ready, Adopted
}
